xee-xslt-ast/tests/snapshots/snapshot_tests__fork1.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:fork xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\"><xsl:sequence>Sequence 1</xsl:sequence><xsl:sequence>Sequence 2</xsl:sequence></xsl:fork>\"#)"
---
Ok(Instruction(Fork(Fork(
  fallbacks: [],
  content: SequenceFallbacks([
    (Sequence(
      select: None,
      sequence_constructor: [
        Content(Text("Sequence 1")),
      ],
      span: Span(
        start: 60,
        end: 72,
      ),
    ), []),
    (Sequence(
      select: None,
      sequence_constructor: [
        Content(Text("Sequence 2")),
      ],
      span: Span(
        start: 99,
        end: 111,
      ),
    ), []),
  ]),
  span: Span(
    start: 1,
    end: 9,
  ),
))))
