xee-xslt-ast/tests/snapshots/snapshot_tests__variable.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" name=\"foo\" select=\"true()\">Hello</xsl:variable>\"#)"
---
Ok(Instruction(Variable(Variable(
  name: OwnedName(
    local_name_str: "foo",
    namespace_str: "",
    prefix_str: "",
  ),
  select: Some(Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: OwnedName(
              local_name_str: "true",
              namespace_str: "http://www.w3.org/2005/xpath-functions",
              prefix_str: "",
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 82,
      end: 88,
    ),
  )),
  as_: None,
  static_: false,
  visibility: None,
  sequence_constructor: [
    Content(Text("Hello")),
  ],
  span: Span(
    start: 1,
    end: 13,
  ),
))))
