xee-xslt-ast/tests/snapshots/snapshot_tests__variable_visibility.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" name=\"foo\" visibility=\"public\">Hello</xsl:variable>\"#)"
---
Ok(Instruction(Variable(Variable(
  name: OwnedName(
    local_name_str: "foo",
    namespace_str: "",
    prefix_str: "",
  ),
  select: None,
  as_: None,
  static_: false,
  visibility: Some(Public),
  sequence_constructor: [
    Content(Text("Hello")),
  ],
  span: Span(
    start: 1,
    end: 13,
  ),
))))
