xee-xslt-ast/tests/snapshots/snapshot_tests__variable_visibility_abstract_with_select_is_error.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" name=\"foo\" visibility=\"abstract\" select=\"true()\">Hello</xsl:variable>\"#)"
---
Err(Attribute(Unexpected(
  name: XmlName(
    namespace: "",
    local: "select",
  ),
  span: Span(
    start: 96,
    end: 102,
  ),
)))
